--- a/taxonomy_check_16S/wf_taxonomy_check_16S.yaml
+++ b/taxonomy_check_16S/wf_taxonomy_check_16S.yaml
@@ -11,7 +11,7 @@ asn_cache:
 #
 Format_16S_rRNA___entry:
     class: File
-    location: input/annotation_text.mft
+    location: input/annot.ent
 
 #
 #   Hidden inputs, via passthroughs and const nodes
@@ -20,3 +20,5 @@ blastdb_dir:
     class: Directory
     # location: '$(GP_HOME)/third-party/data/BacterialPipeline/16S_rRNA/blastdb'
     location: input/16S_rRNA
+    
+taxid: 1208324
