changes in CWL after GP-23734; JIRA: GP-23711
 tested with docker

 - fixed task_types/tt_blastn_wnode.cwl#blast_align.outputSource
 - added taxon_db inflow to plane, tasktype and app CWL files
 - changed input yaml to include taxondb file

--- a/taxonomy_check_16S/wf_taxonomy_check_16S.yaml
+++ b/taxonomy_check_16S/wf_taxonomy_check_16S.yaml
@@ -22,3 +22,7 @@ blastdb_dir:
     location: input/16S_rRNA
     
 taxid: 1208324
+
+taxon_db: 
+    class: File
+    location: input/taxonomy.sqlite3
