passed --validate; JIRA: GP-23941
time nohup cwltool --validate --leave-outputs wf_pgap.cwl input.yaml  > cwltool.1.log &
cat cwltool.1.log
/panfs/pan1.be-md.ncbi.nlm.nih.gov/gpipe/home/badrazat/projects/PacBio/CWL-tutorial/cwltool-git/venv/bin/cwltool 1.0.20180508202931
Resolved 'wf_pgap.cwl' to 'file:///home/badrazat/github/repos/pgap/wf_pgap.cwl'
Tool definition is valid

--- a/input.yaml
+++ b/input.yaml
@@ -102,3 +102,6 @@ val_res_den_xml:
     class: File    
     location: input/validation-results.xml
     
+protein_alignment_aligns_shortcut: 
+    class: File
+    location: input/tmp_shortcuts/protein_alignment_aligns_shortcut.asn
