fixes to pass validation stage of cwltool; now protein_alignment/ is included; JIRA: GP-23940; GP-23941

--- a/input.yaml
+++ b/input.yaml
@@ -84,6 +84,9 @@ thresholds:
 uniColl_cache:
   class: Directory
   location: input/uniColl_cache
+uniColl_path:
+  class: Directory
+  location: input/uniColl_path
 univ_prot_xml:
   class: File
   location: input/universal.xml
