--- a/input.yaml
+++ b/input.yaml
@@ -41,26 +41,26 @@ genemark_path:
   location: input/GeneMark
 hmm_path:
   class: Directory
-  location: input/real_hmms
+  location: input/uniColl_path/real_hmms
 hmms_tab:
   class: File
-  location: input/real_hmms.tab
+  location: input/uniColl_path/real_hmms.tab
 identification_db_dir:
   class: Directory
   location: input/Create_identification_BLASTdb_dir
 naming_blast_db: # NamingDatabase
   class: Directory
-  # location: input/Create_identification_BLASTdb_dir # this one might have created problems for assign_cluster, let's try this:
-  location: input/Create_identification_BLASTdb_dir_full
+  location: input/Create_identification_BLASTdb_dir # this one might have created problems for assign_cluster, let's try this:
+  #location: input/Create_identification_BLASTdb_dir_full
 naming_hmms_combined: # ${GP_HOME}/third-party/data/BacterialPipeline/uniColl/ver-3.2/naming_hmms_combined.mft
   class: Directory
-  location: input/naming_hmms_combined
+  location: input/uniColl_path/naming_hmms
 naming_hmms_tab:
   class: File
-  location: input/naming_hmms.tab
+  location: input/uniColl_path/naming_hmms.tab
 naming_sqlite: # /panfs/pan1.be-md.ncbi.nlm.nih.gov/gpipe/home/badrazat/local-install/2018-05-17/third-party/data/BacterialPipeline/uniColl/ver-3.2/naming.sqlite
   class: File
-  location: input/naming.sqlite
+  location: input/uniColl_path/naming.sqlite
 rfam_amendments:
   class: File
   location: input/rfam-amendments.xml
@@ -81,7 +81,7 @@ thresholds:
   location: input/thresholds.xml
 uniColl_cache:
   class: Directory
-  location: input/uniColl_cache
+  location: input/uniColl_path/cache
 uniColl_path:
   class: Directory
   location: input/uniColl_path
@@ -97,37 +97,3 @@ wp_hashes:
 asn2pas_xsl:   
   class: File
   location: input/asn2pas.xsl
-#
-#   shortcuts
-#
-    
-protein_alignment_aligns_shortcut: 
-    class: File
-    location: input/tmp_shortcuts/protein_alignment_aligns_shortcut.asn
-sequence_cache_shortcut: 
-    class: Directory
-    location: input/tmp_shortcuts/sequence_cache
-ids_out_shortcut:     
-    class: File
-    location: input/tmp_shortcuts/ids_out_shortcut
-  
-bacterial_annot_3_Run_GeneMark_Post_models_bypass:
-    class: File
-    location: input/tmp_shortcuts/bacterial_annot_3_Run_GeneMark_Post_models_bypass
-bacterial_prepare_unannotated_master_desc_bypass:
-    class: File
-    location: input/tmp_shortcuts/bacterial_prepare_unannotated_master_desc_bypass
-genomic_source_gencoll_asn_bypass:
-    class: File
-    location: input/tmp_shortcuts/genomic_source_gencoll_asn_bypass
-bacterial_annot_4_out_annotation_bypass:  # does not work SQD-4522
-    class: File
-    location: input/tmp_shortcuts/bacterial_annot_4_out_annotation_bypass
-fam_report_bypass: # this is replacement bypass-for-bypass ( for bacterial_annot_4_out_annotation_bypass) SQD-4522
-    class: File
-    location: input/tmp_shortcuts/fam_report_bypass
-
-bacterial_annot_3_Search_Naming_HMMs_hmm_hits_bypass:
-    class: File
-    location: input/tmp_shortcuts/bacterial_annot_3_Search_Naming_HMMs_hmm_hits_bypass
-    
