--- a/input.yaml
+++ b/input.yaml
@@ -26,7 +26,7 @@ asn2pas_xsl:
   location: input/asn2pas.xsl
 blast_rules_db_dir:
   class: Directory
-  location: input/blast_rules_db_dir
+  location: input/uniColl_path/blast_dir
 CDDdata: # ${GP_HOME}/third-party/data/CDD/cdd - this is rpsblastdb
   class: Directory
   location: input/cdd
@@ -48,13 +48,9 @@ hmm_path:
 hmms_tab:
   class: File
   location: input/uniColl_path/real_hmms.tab
-identification_db_dir:
-  class: Directory
-  location: input/Create_identification_BLASTdb_dir
 naming_blast_db: # NamingDatabase
   class: Directory
-  location: input/Create_identification_BLASTdb_dir # this one might have created problems for assign_cluster, let's try this:
-  #location: input/Create_identification_BLASTdb_dir_full
+  location: input/uniColl_path/blast_dir # this one might have created problems for assign_cluster, let's try this:
 naming_hmms_combined: # ${GP_HOME}/third-party/data/BacterialPipeline/uniColl/ver-3.2/naming_hmms_combined.mft
   class: Directory
   location: input/uniColl_path/naming_hmms
@@ -85,15 +81,15 @@ thresholds:
 uniColl_cache:
   class: Directory
   location: input/uniColl_path/cache
-uniColl_path:
-  class: Directory
-  location: input/uniColl_path
+#uniColl_path:
+#  class: Directory
+#  location: input/uniColl_path
 univ_prot_xml:
   class: File
-  location: input/universal.xml
+  location: input/uniColl_path/universal.xml
 val_res_den_xml:
   class: File
   location: input/validation-results.xml
 wp_hashes:
   class: File
-  location: input/wp-hashes.sqlite
+  location: input/uniColl_path/wp-hashes.sqlite
