when using computed command line parameters, always need a value for a formal parameter controlling computation; dummy input parameters should be always non-optional and have default: value; GP-24558

--- a/progs/unit_tests/test_trnascan_wnode/input.yaml
+++ b/progs/unit_tests/test_trnascan_wnode/input.yaml
@@ -1,4 +1,9 @@
-taxid: 2
 taxon_db:
     class: File
     location: taxonomy.sqlite3
+jobs:
+    class: File
+    location: jobs.xml
+asn_cache:
+    class: Directory
+    location: sequence_cache
