Use a structurally valid dummy BioProject accession. JIRA: PGAPX-135.

--- a/input_template2/sample1.yaml
+++ b/input_template2/sample1.yaml
@@ -24,7 +24,7 @@ authors:
           middle_initial: 'T800'
     -     first_name: 'Linda'
           last_name: 'Hamilton'
-bioproject: 'PRJ9999999'
+bioproject: 'PRJNA9999999'
 biosample: 'SAMN99999999'      
 # -- Locus tag prefix - optional. Limited to 9 letters. Unless the locus tag prefix was officially assigned by NCBI, ENA, or DDBJ, it will be replaced upon submission of the annotation to NCBI and is therefore temporary and not to be used in publications. If not provided, pgaptmp will be used.
 locus_tag_prefix: 'tmp'
