--- a/input_simple.yaml
+++ b/input_simple.yaml
@@ -85,3 +85,17 @@ val_res_den_xml:
 wp_hashes:
   class: File
   location: input/uniColl_path/wp-hashes.sqlite
+
+#
+#   Setup for template prepartion
+# 
+
+submit_block_template_static: 
+    class: File
+    location: input_template/submit_block_static.template
+molinfo_complete_asn: 
+    class: File
+    location: input_template/molinfo_complete.asn
+molinfo_wgs_asn: 
+    class: File
+    location: input_template/molinfo_wgs.asn
