take list of target (input) assemblies (one assembly exactly in our case) from only one place; JIRA: PGAPX-242
In other words, we do not need to extract gencoll ids from input gencoll.asn

Plus: work in progress for the rest of the graph.

--- a/bacterial_kmer/input_wf_bacterial_kmer.yaml
+++ b/bacterial_kmer/input_wf_bacterial_kmer.yaml
@@ -12,9 +12,9 @@ ref_assembly_taxid: 243273
 ANI_cutoff: 
     class: File
     location: input/ANI_cutoff.xml
-kmer_cache_path:
-    class: Directory
-    location: input/kmer-cache-minhash
+kmer_cache_sqlite:
+    class: File
+    location: input/kmer.sqlite
 kmer_reference_assemblies:    
     class: File
-    location: input/kmer-reference-assms
+    location: input/reference.gcids
